# erpc

erpc_c/: CMakeLists.txt
erpc_c/config/: erpc_config.h
erpc_c/port/: erpc_threading.h  erpc_threading_zephyr.cpp
erpc_c/transports/: erpc_tcp_transport.cpp
zephyr/: module.yml
